services/shared/keycloak/templates/services.yaml
kind: Service
apiVersion: v1
metadata:
  name: keycloak-service
spec:
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
---
kind: Service
apiVersion: v1
metadata:
  name: keycloak-cluster
spec:
  selector:
    app: keycloak
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
