services/shared/keycloak/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
spec:
  rules:
    - host: "iam.yhu.ch"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: keycloak-service
                port:
                  number: 80
